extrafiles/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vhg-api-ingress
  namespace: vhg-1
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:

      - path: /api/plant(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: plant-service
            port:
              number: 8005

      - path: /api/auth(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: auth-service
            port:
              number: 8006

      - path: /api/ai(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: ai-service
            port:
              number: 8007
